feat(v0.8): Add governance traits (RBAC, Audit, Secrets) and admin API
- RbacConnector trait for external enterprise IAM
- AuditStore trait with InMemoryAuditStore implementation
- SecretsManager trait for encrypted config storage
- New multi_agent_admin crate with /admin API endpoints
  - GET /config, /metrics, /audit
- Added to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/store",
     "crates/governance",
     "crates/model_gateway",
+    "crates/admin",
 ]
 
 [workspace.package]
