feat(v0.8): Add dashboard UI with static file serving
- HTML: Sidebar nav, overview, config, metrics, audit tabs
- CSS: Premium dark theme with glassmorphism
- JS: Tab navigation, API calls for config/metrics/audit
- rust-embed integration for static asset serving

--- a/crates/admin/Cargo.toml
+++ b/crates/admin/Cargo.toml
@@ -14,3 +14,5 @@ serde_json.workspace = true
 tower-http.workspace = true
 utoipa = { version = "4", features = ["axum_extras"] }
 utoipa-swagger-ui = { version = "6", features = ["axum"] }
+rust-embed = "8"
+mime_guess = "2"
