--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,10 @@ async-mcp = "0.1"
 image = "0.25"
 base64 = "0.22"
 
+# Cryptography
+aes-gcm = "0.10"
+rand = "0.8"
+
 # AST parsing for code skeletonization
 syn = { version = "2", features = ["full", "parsing", "visit"] }
 quote = "1"
