--- a/crates/governance/Cargo.toml
+++ b/crates/governance/Cargo.toml
@@ -14,6 +14,9 @@ dashmap.workspace = true
 uuid.workspace = true
 tracing-subscriber.workspace = true
 regex = "1.10"
+aes-gcm.workspace = true
+rand.workspace = true
+base64.workspace = true
 
 # Observability
 metrics.workspace = true
