feat(v0.8/production): OIDC Integration and DashMap Optimization
- Implemented OidcRbacConnector for JWT validation
- Verified DashMap implementation in Store crate
- Added dependencies: jsonwebtoken, reqwest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ base64 = "0.22"
 # Cryptography
 aes-gcm = "0.10"
 rand = "0.8"
+jsonwebtoken = "9"
 
 # AST parsing for code skeletonization
 syn = { version = "2", features = ["full", "parsing", "visit"] }
