--- a/crates/governance/Cargo.toml
+++ b/crates/governance/Cargo.toml
@@ -17,6 +17,8 @@ regex = "1.10"
 aes-gcm.workspace = true
 rand.workspace = true
 base64.workspace = true
+jsonwebtoken.workspace = true
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 
 # Observability
 metrics.workspace = true
