--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ repository = "https://github.com/wqswing/Multiagent-AI"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 futures = "0.3"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+
 
 # Web framework
 axum = "0.7"
