--- a/crates/gateway/Cargo.toml
+++ b/crates/gateway/Cargo.toml
@@ -35,3 +35,4 @@ governor = "0.6"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
+multi_agent_skills = { workspace = true }
