--- a/crates/store/Cargo.toml
+++ b/crates/store/Cargo.toml
@@ -21,6 +21,7 @@ serde_json.workspace = true
 
 # Vector Database
 qdrant-client.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
