--- a/crates/admin/Cargo.toml
+++ b/crates/admin/Cargo.toml
@@ -26,6 +26,7 @@ aws-config = "1"
 uuid = { version = "1.10", features = ["v4", "serde"] }
 tracing.workspace = true
 bollard = "0.18"
+bytes = "1"
 
 
 
