--- a/crates/app/src-tauri/Cargo.toml
+++ b/crates/app/src-tauri/Cargo.toml
@@ -25,6 +25,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = { workspace = true }
 serde_yaml.workspace = true
+uuid = { version = "1", features = ["v4"] }
+dirs = "5.0"
 
 # Workspace dependencies
 tokio = { workspace = true, features = ["full"] }
@@ -32,7 +34,7 @@ axum.workspace = true
 tracing.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
 anyhow.workspace = true
-# async-trait.workspace = true # likely not needed directly unless implementing traits
+async-trait.workspace = true
 
 multi_agent_core.workspace = true
 multi_agent_gateway.workspace = true
