Relicense: Change project license from MIT to AGPLv3

--- a/crates/app/src-tauri/Cargo.toml
+++ b/crates/app/src-tauri/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "cratesapp"
-version = "0.1.0"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
 description = "A Tauri App"
-authors = ["you"]
-edition = "2021"
+authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
