--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
 version = "0.1.0"
 edition = "2021"
 authors = ["Multiagent Team"]
-license = "MIT"
+license = "AGPL-3.0-only"
 repository = "https://github.com/wqswing/Multiagent-AI"
 
 [workspace.dependencies]
