--- a/crates/admin/Cargo.toml
+++ b/crates/admin/Cargo.toml
@@ -2,6 +2,7 @@
 name = "multi_agent_admin"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 multi_agent_core.workspace = true
