--- a/crates/sandbox/Cargo.toml
+++ b/crates/sandbox/Cargo.toml
@@ -2,6 +2,7 @@
 name = "multi_agent_sandbox"
 version.workspace = true
 edition.workspace = true
+license.workspace = true
 
 [dependencies]
 # Async runtime
