--- a/crates/gateway/Cargo.toml
+++ b/crates/gateway/Cargo.toml
@@ -11,8 +11,11 @@ multi_agent_model_gateway.workspace = true
 multi_agent_admin.workspace = true
 multi_agent_governance.workspace = true
 multi_agent_ecosystem.workspace = true
+rig-core.workspace = true
+sha2 = "0.10"
 tokio.workspace = true
 axum = { workspace = true, features = ["ws"] }
+chrono = { version = "0.4", features = ["serde"] }
 axum-extra.workspace = true
 tower.workspace = true
 tower-http.workspace = true
@@ -22,6 +25,7 @@ uuid.workspace = true
 tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+schemars.workspace = true
 serde_yaml.workspace = true
 anyhow.workspace = true
 dashmap.workspace = true
@@ -39,6 +43,7 @@ governor = "0.6"
 # WebSocket + stream utilities
 futures.workspace = true
 axum-server = { version = "0.8.0", features = ["tls-rustls"] }
+secrecy = "0.10.3"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
