--- a/crates/governance/Cargo.toml
+++ b/crates/governance/Cargo.toml
@@ -32,7 +32,7 @@ opentelemetry.workspace = true
 opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
 tracing-opentelemetry.workspace = true
-rusqlite = { version = "0.38.0", features = ["bundled"] }
+rusqlite.workspace = true
 sha2.workspace = true
 hex = "0.4.3"
 bytes.workspace = true
