--- a/crates/model_gateway/Cargo.toml
+++ b/crates/model_gateway/Cargo.toml
@@ -13,6 +13,7 @@ serde.workspace = true
 serde_json.workspace = true
 dashmap.workspace = true
 rig-core.workspace = true
+secrecy.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
