--- a/crates/skills/Cargo.toml
+++ b/crates/skills/Cargo.toml
@@ -15,6 +15,7 @@ tokio.workspace = true
 tokio-stream.workspace = true
 futures.workspace = true
 async-trait.workspace = true
+sha2 = "0.10"
 tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -26,6 +27,7 @@ quote.workspace = true
 proc-macro2.workspace = true
 async-mcp.workspace = true
 uuid.workspace = true
+url.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
