--- a/crates/store/Cargo.toml
+++ b/crates/store/Cargo.toml
@@ -20,6 +20,7 @@ uuid.workspace = true
 tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+rusqlite.workspace = true
 
 # Vector Database
 qdrant-client.workspace = true
