--- a/crates/governance/Cargo.toml
+++ b/crates/governance/Cargo.toml
@@ -24,6 +24,7 @@ base64.workspace = true
 jsonwebtoken.workspace = true
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 serde_yaml.workspace = true
+futures.workspace = true
 
 # Observability
 metrics.workspace = true
