--- a/crates/ecosystem/Cargo.toml
+++ b/crates/ecosystem/Cargo.toml
@@ -15,6 +15,7 @@ anyhow.workspace = true
 tracing.workspace = true
 thiserror.workspace = true
 dashmap.workspace = true
+semver = "1"
 
 [dev-dependencies]
 tempfile = "3"
