feat(gateway): add admin routing simulate and versioned policy publishing

--- a/crates/gateway/Cargo.toml
+++ b/crates/gateway/Cargo.toml
@@ -33,6 +33,7 @@ anyhow.workspace = true
 dashmap.workspace = true
 image.workspace = true
 base64.workspace = true
+semver = "1"
 
 # Observability
 metrics.workspace = true
