--- a/crates/controller/Cargo.toml
+++ b/crates/controller/Cargo.toml
@@ -20,6 +20,7 @@ uuid.workspace = true
 anyhow.workspace = true
 dashmap.workspace = true
 chrono = "0.4.43"
+rusqlite.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["test-util", "macros"] }
