chore: trim unused placeholder and ignore runtime artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,10 @@
 # Temporary files
 *.tmp
 *.temp
+
+# Runtime/generated state
+/.sovereign_claw/
+/network_policy.json
+/audit.db
+/audit.db-shm
+/audit.db-wal
