--- a/crates/app/src-tauri/Cargo.toml
+++ b/crates/app/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "cratesapp"
+name = "opencoordex-app"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
-description = "A Tauri App"
+description = "OpenCoordex Desktop App"
 authors.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,7 +12,7 @@ authors.workspace = true
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "cratesapp_lib"
+name = "opencoordex_app_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
